[package]
name = "agave-accounts-hash-cache-tool"
description = "Tool for accounts hash cache files"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
ahash = { workspace = true }
bytemuck = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true, features = ["rayon", "raw-api"] }
memmap2 = { workspace = true }
rayon = { workspace = true }
solana-accounts-db = { workspace = true }
solana-sdk = { workspace = true }
solana-version = { workspace = true }

[features]
dev-context-only-utils = []
